feat(ui):switch scene animation and tel. formate
-add switch scene animation in SceneManager
-add phone number formate '000-000-0000' in login page